[metadata]
name = Emberblast
version = 0.0.2
author = Felipe Meriga
author_email = felipe.meriga@gmail.com
description = Medieval Turn based RPG
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/felipemeriga/Emberblast
project_urls =
    Bug Tracker = https://github.com/felipemeriga/Emberblast/issues
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = false

[options.packages.find]

[options.entry_points]
console_scripts =
    emberblast = emberblast.__main__:run_project