[metadata]
name = Emberblast
version = 0.0.2
author = Felipe Meriga
author_email = felipe.meriga@gmail.com
description = Medieval Turn based RPG
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/felipemeriga/Emberblast
project_urls =
    Bug Tracker = https://github.com/felipemeriga/Emberblast/issues
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = false
install_requires =
    timg>=1.1.5
    InquirerPy>=0.2.0
    colorama>=0.4.4
    PyYAML>=5.4.1
    Cerberus>=1.3.4
    emojis>=0.6.0
    numpy>=1.21.1
    sqlparse>=0.4.1
    termcolor>=1.1.0
    cloudpickle>=1.6.0

[options.packages.find]

[options.entry_points]
console_scripts =
    emberblast = emberblast.__main__:run_project